--- a/config/secrets-example.yml
+++ b/config/secrets-example.yml
@@ -2,31 +2,21 @@
 # COPY this file to secrets.yml
 # Do not provide any real key in this file. No keys should be pushed to Youtube
 development:
-  DB_FILENAME: db/local/dev.db
-  SECURE_SCHEME: HTTP
-  YOUTUBE_API: https://www.googleapis.com/youtube/v3
-  YOUTUBE_API_KEY: <YOUTUBE_API_KEY>
-  TWITTER_API_KEY: <TWITTER_API_KEY>
-  TWITTER_API_SECRET_KEY: <TWITTER_API_SECRET_KEY>
-  TWITTER_BEARER: <TWITTER_BEARER>
+  API_HOST: http://localhost:9090
+  APP_HOST: http://localhost:9000
   SESSION_SECRET: <GENERATED_SECRET>
 
+app_test:
+  API_HOST: http://localhost:9090
+  APP_HOST: http://localhost:9000
+
 test:
-  DB_FILENAME: db/local/test.db
-  SECURE_SCHEME: HTTP
-  YOUTUBE_API: https://www.googleapis.com/youtube/v3
-  YOUTUBE_API_KEY: <YOUTUBE_API_KEY>
-  TWITTER_API_KEY: <TWITTER_API_KEY>
-  TWITTER_API_SECRET_KEY: <TWITTER_API_SECRET_KEY>
-  TWITTER_BEARER: <TWITTER_BEARER>
-  SESSION_SECRET:  <GENERATED_SECRET>
+  API_HOST: http://localhost:9090
+  APP_HOST: http://localhost:9000
+  SESSION_SECRET: <GENERATED_SECRET>
 
 production:
-  DB_FILENAME:
-  SECURE_SCHEME: HTTPS
-  YOUTUBE_API: https://www.googleapis.com/youtube/v3
-  YOUTUBE_API_KEY: <YOUTUBE_API_KEY>
-  TWITTER_API_KEY: <TWITTER_API_KEY>
-  TWITTER_API_SECRET_KEY: <TWITTER_API_SECRET_KEY>
-  TWITTER_BEARER: <TWITTER_BEARER>
-  SESSION_SECRET:  <GENERATED_SECRET>
+  # - assign DATABASE_URL in production
+  API_HOST: http://url.to.api
+  APP_HOST: http://url.to.app
+  SESSION_SECRET: <GENERATED_SECRET>
